--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
 VITE_TMDB_API_KEY=80d491707d8cf7b38aa19c7ccab0952f
+
+
 VITE_FIREBASE_API_KEY=AIzaSyBnyNHAIkK3soCLCfRXMjjQyTQhmvtBuh4
+VITE_FIREBASE_AUTH_DOMAIN=moviesuggestion-d6b45.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=moviesuggestion-d6b45
+VITE_FIREBASE_STORAGE_BUCKET=moviesuggestion-d6b45.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID=182351124866
+VITE_FIREBASE_APP_ID=1:182351124866:web:0b0b9f419d0ff9358b979b
+VITE_FIREBASE_MEASUREMENT_ID=G-8382J0PJ16
